Add generation of multiple md files in folders

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
     <title>Markdown to HTML</title>
   </head>
   <body>
+    <nav>
+      <!-- Links to the generated pages will go here -->
+    </nav>
     <div id="content"><!-- MARKDOWN CONTENT WILL BE INJECTED HERE --></div>
     <script src="bundle.js"></script>
   </body>
