Fix style and routing

--- a/src/template.html
+++ b/src/template.html
@@ -11,21 +11,7 @@
     <meta name="author" content="Naglis Šuliokas" />
     <link rel="icon" href="logo.png" type="image/png" />
     <title>No Point Writings - blog 'n stuff</title>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-0EBN56EQYC"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-0EBN56EQYC");
-    </script>
-    <link rel="stylesheet" href="style.css" />
+    <base href="/" />
   </head>
   <body>
     <header>
@@ -203,5 +189,19 @@
       </div>
     </footer>
     <script src="bundle.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0EBN56EQYC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0EBN56EQYC");
+    </script>
   </body>
 </html>
