Works for now. Gonna change now the image logic

--- a/src/template.html
+++ b/src/template.html
@@ -31,8 +31,7 @@
       <section>
         <div id="cookies">
           <p>
-            Naudodamiesi šiuo tinklapiu jūs sutinkate su Google Analytics
-            slapukų naudojimu.
+            By using this website you agree to use Google Analytics cookies.
           </p>
         </div>
         <div id="content"><!-- MARKDOWN CONTENT WILL BE INJECTED HERE --></div>
@@ -184,7 +183,7 @@
         </div>
         <div>
           <p>© 2024 Naglis Šuliokas. All rights reserved.</p>
-          <p>Last updated on 2024-07-10</p>
+          <p>Last updated on 2024-07-14</p>
         </div>
       </div>
     </footer>
