--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
       content="Naglis Šuliokas, blog, portfolio, programming, writing, teaching"
     />
     <meta name="author" content="Naglis Šuliokas" />
-    <link rel="icon" href="logo.png" type="image/png" />
+    <link rel="icon" href="./logo.png" type="image/png" />
     <title>No Point Writings - blog 'n stuff</title>
     <base href="/" />
   </head>
